# sparta_django_advanced

./: .gitignore  db.sqlite3  like.sh  pyproject.toml
.github/workflows/: cl.yml
base/: settings.py  urls.py
tabom/apis/v1/: article_router.py  like_router.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py  0003_article_like_count.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_auto_now.py
tabom/tests/apis/v1/: test_article_router.py  test_like_router.py
tabom/tests/services/: test_article_service.py  test_like_service.py
