[tool.poetry]
name = "django_advanced"
version = "0.1.0"
description = ""
authors = ["김재성 <zhqmfkv@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
django-ninja = "0.16.1"
black = "21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120